--- a/checkout.html
+++ b/checkout.html
@@ -91,10 +91,10 @@
               <h4>Choose Bouncer</h4>
               <div>
                 <select class="form-control " name="" id="select">
-                  <option value="bouncer">One Bouncer.<span class="">Ksh2000</span></option>
-                  <option value="bouncer">Two Bouncer.<span class="">ksh4000</span></option>
-                  <option value="bouncer">Three Bouncer.<span class="">ksh6000</span></option>
-                  <option value="bouncer">Four Bouncer.<span class="">ksh8000</span></option>
+                  <option value="2000">One Bouncer.<span class="">Ksh2000</span></option>
+                  <option value="4000">Two Bouncer.<span class="">ksh4000</span></option>
+                  <option value="6000">Three Bouncer.<span class="">ksh6000</span></option>
+                  <option value="8000">Four Bouncer.<span class="">ksh8000</span></option>
                 </select>
               </div>
               <div class="container">
@@ -108,15 +108,15 @@
                 <input class="selector" type="checkbox" name="Beer" value="Beer" />Beer<br />
                 <input class="selector" type="checkbox" name="Cocktail" value="Cocktail" />Cocktail<br />
                 <h4>Food</h4>
-                <input class="selector" type="radio" name="food" value="yes">Yes<br>
+                <input class="selector" id="food" type="radio" name="food" value="yes">Yes<br>
                 <input class="selector" type="radio" name="food" value="no">No<br>
                 <h4>Venue</h4>
-                <input class="selector" type="radio" name="venue" value="yes">Yes<br>
+                <input class="selector" id="venue" type="radio" name="venue" value="yes">Yes<br>
                 <input class="selector" type="radio" name="venue" value="no">No<br>
                 <h4>System and DJ</h4>
-                <input class="selector" type="radio" name="System and DJ" value="yes">Yes<br>
+                <input class="selector" id="djay" type="radio" name="System and DJ" value="yes">Yes<br>
                 <input class="selector" type="radio" name="System and DJ" value="no">No<br>
-                <button type="submit" class="btn btn-danger">choose</button>
+                <button type="submit" class="btn btn-danger" onclick="choose();">choose</button>
               </div>
             </div>
           </form>
@@ -126,6 +126,11 @@
           <ul id="drinks">
             
           </ul>
+          <p><span id="security"></span></p>
+          <p><span id="fud"></span></p>
+          <p><span id="venu"></span></p>
+          <p><span id="system"></span></p>
+          <p>Ksh:<span id="total"></span></p>
         </div>
       </div>
 
