--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/stylesheet.css" />
   <link rel="stylesheet" href="css/font-awesome.css" />
   <script src="js/jquery-3.4.1.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/checkout.js"></script>
   <title>Dundaing</title>
 </head>
 
@@ -121,8 +121,12 @@
             </div>
           </form>
         </div>
-        <div id="display" class="col-md-6">
-          <h4>Custom Package</h4>
+        <div id="display" class="card col-md-6">
+          <div class="card-header">
+              <h4>Custom Package</h4>
+          </div>
+          
+          <h5>Drink Options</h5>
           <ul id="drinks">
             
           </ul>
