change card styling

--- a/checkout.html
+++ b/checkout.html
@@ -41,12 +41,12 @@
                 <li>Food</li>
                 <li>Drinks</li>
                 <li>Venue</li>
-                <li>Bouncer</li>
+                <li>1 Bouncer</li>
                 <li>Mixologist</li>
                 <br>
               </ol>
             </div>
-            <button type="button" class="btn btn-success">Choose</button>
+            <button type="button" class="btn btn-success">Choose ksh 35000</button>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 col-sm-10 p-1 mx-auto">
@@ -57,12 +57,12 @@
                 <li>Food</li>
                 <li>Drinks</li>
                 <li>Venue</li>
-                <li>Bouncer</li>
+                <li>2 Bouncers</li>
                 <li>System</li>
                 <li>Mixologist</li>
               </ol>
             </div>
-            <button class="btn btn-success">Choose</button>
+            <button class="btn btn-success">Choose ksh 65000</button>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 col-sm-10 p-1 mx-auto">
@@ -73,12 +73,12 @@
                 <li>Food</li>
                 <li>Drinks</li>
                 <li>Venue</li>
-                <li>Bouncer</li>
+                <li>4 Bouncers</li>
                 <li>System & DJ</li>
                 <li>Mixologist</li>
               </ol>
             </div>
-            <button class="btn btn-success">Choose</button>
+            <button class="btn btn-success">Choose ksh 95000</button>
           </div>
         </div>
       </div>
@@ -91,10 +91,10 @@
               <h4>Choose Bouncer</h4>
               <div>
                 <select class="form-control " name="" id="select">
-                  <option value="2000">One Bouncer.<span class="">Ksh2000</span></option>
-                  <option value="4000">Two Bouncer.<span class="">ksh4000</span></option>
-                  <option value="6000">Three Bouncer.<span class="">ksh6000</span></option>
-                  <option value="8000">Four Bouncer.<span class="">ksh8000</span></option>
+                  <option value="2000">One Bouncer <span class="">Ksh2000</span></option>
+                  <option value="4000">Two Bouncer <span class="">ksh4000</span></option>
+                  <option value="6000">Three Bouncer <span class="">ksh6000</span></option>
+                  <option value="8000">Four Bouncer <span class="">ksh8000</span></option>
                 </select>
               </div>
               <div class="container">
@@ -121,23 +121,25 @@
             </div>
           </form>
         </div>
-        <div id="display" class="card col-md-6">
-          <div class="card-header">
+        <div class="col-md-6">
+          <div id="display" class="card">
+            <div class="card-header bg-dark">
               <h4>Custom Package</h4>
+            </div>
+            <div class="card-body bd bd-t-0 rounded-bottom bg-dark">
+              <h5>Drink Options</h5>
+              <ul id="drinks">
+
+              </ul>
+              <p><span id="security"></span></p>
+              <p><span id="fud"></span></p>
+              <p><span id="venu"></span></p>
+              <p><span id="system"></span></p>
+              <p>Ksh:<span id="total"></span></p>
+            </div>
           </div>
-          
-          <h5>Drink Options</h5>
-          <ul id="drinks">
-            
-          </ul>
-          <p><span id="security"></span></p>
-          <p><span id="fud"></span></p>
-          <p><span id="venu"></span></p>
-          <p><span id="system"></span></p>
-          <p>Ksh:<span id="total"></span></p>
         </div>
       </div>
-
     </div>
   </div>
 </body>
